Fix for MS Edge and MS IE - not showing password reveal icon
Added style for hiding Microsoft default password reveal icons  (duplicates icon in password input)

src: https://stackoverflow.com/questions/61449079/how-to-hide-the-eye-from-a-password-input-in-ms-edge-and-ie/61450596

--- a/support/cas-server-support-thymeleaf/src/main/resources/static/css/cas.css
+++ b/support/cas-server-support-thymeleaf/src/main/resources/static/css/cas.css
@@ -625,3 +625,9 @@ text-align: justify;
 /* flex-basis: auto works in IE with the column view,
      but a specific value needs to be set for row view
    */
+
+.pwd::-ms-reveal,
+.pwd::-ms-clear {
+    display: none;
+}
+
